default/objects/ClosedOpportunityManagement__c/ClosedOpportunityManagement__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Closed Opportunity Management</label>
</CustomObject>