default/objects/ClosedOpportunityManagement__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is TRUE, the exception rule is active.</description>
    <inlineHelpText>If this checkbox is TRUE, the exception rule is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>