default/objects/ClosedOpportunityManagement__c/fields/Exception_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_Field_API_Name__c</fullName>
    <inlineHelpText>Provide API Name of field that should be excluded from the &quot;locking&quot; logic.</inlineHelpText>
    <label>Exception Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>