default/objects/ClosedOpportunityManagement__c/fields/Exception_URP_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Exception_URP_Developer_Name__c</fullName>
    <inlineHelpText>Provide username or Role Id (18 chars) or Profile Id (18 chars) that should be excluded from &quot;locking&quot; logic.</inlineHelpText>
    <label>Username/Role/Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>