default/objects/ClosedOpportunityManagement__c/fields/Excluded_Field__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field that are excluded from the logic for all Record Types, should be used mostly only for standard fields (LastModifiedDate, etc.).</inlineHelpText>
    <label>Excluded Field</label>
    <type>Checkbox</type>
</CustomField>