default/objects/ClosedOpportunityManagement__c/fields/Metadata_Type_URP__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type_URP__c</fullName>
    <inlineHelpText>Provide info which metadata type is being excluded - User or Role or Profile.</inlineHelpText>
    <label>Metadata Type (User/Role/Profile)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>