default/objects/ClosedOpportunityManagement__c/fields/Opportunity_Record_Type_Develop_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type_Develop_Name__c</fullName>
    <inlineHelpText>Developer name of Opportunity Record Type which the rule should be applied to.</inlineHelpText>
    <label>Opportunity Record Type Develop Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>