default/objects/ClosedOpportunityManagement__c/listViews/All_Active.listView-meta.xml
<ListView>
    <fullName>All_Active</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Develop_Name__c</columns>
    <columns>Exception_URP_Developer_Name__c</columns>
    <columns>Metadata_Type_URP__c</columns>
    <columns>Exception_Field_API_Name__c</columns>
    <columns>Excluded_Field__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
    <language>en_US</language>
</ListView>