default/objects/ClosedOpportunityManagement__c/listViews/Excluded_Fields.listView-meta.xml
<ListView>
    <fullName>Excluded_Fields</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Excluded_Field__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Excluded_Field__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Excluded Fields</label>
    <language>en_US</language>
</ListView>