default/objects/ClosedOpportunityManagement__c/listViews/Excluded_Logic.listView-meta.xml
<ListView>
    <fullName>Excluded_Logic</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type_Develop_Name__c</columns>
    <columns>Exception_URP_Developer_Name__c</columns>
    <columns>Metadata_Type_URP__c</columns>
    <columns>Exception_Field_API_Name__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Excluded_Field__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Excluded Logic</label>
    <language>en_US</language>
</ListView>